Mentioned upcoming Geant4 9.3 release

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -87,7 +87,7 @@ implementations of corresponding INCL and ABLA models.
 Recently these implementations have been translated into C++ and distributed
 as part of the Geant4 toolkit~\cite{pk08bProceedings}. 
 The first beta release of INCL4.2 and ABLA~v3 was in Geant4~9.1 (December 2007)~\cite{g4site}.
-Currently the INCL and ABLA versions in Geant4~9.2 are straightforward
+Currently the INCL and ABLA versions in Geant4~9.2 and upcoming 9.3 are straightforward
 Fortran to C++ translations~\cite{g4incl}.
 Table~\ref{tab:inclabla} summarises the key features of these models.
 \vspace{-0.5cm}
