--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -67,22 +67,22 @@ target and sub-critical core.
 \section{Geant4 physics lists}\label{sec:list}
 
 In Geant4 hadronic physics different aspects of the calculation are
-separated using abstract interfaces. The main bulding blocks of Geant4
-hadronic physics are:
+separated using abstract interfaces. 
+%The main building blocks of Geant4 hadronic physics are:
+In this scheme:
 \begin{itemize}
-\item \emph{cross section} determines when a reaction will take place,
-\item \emph{physics model} calculates the final state of the reaction and
-\item \emph{process} combines the model and the cross section to
+\item \emph{Cross section} determines when a reaction will take place.
+\item \emph{Physics model} calculates the final state of the reaction.
+\item \emph{Process} combines the model and the cross section to
   create a description of how particles interact with matter.
 \end{itemize}
 In a Geant4 application the needed physics processes, cross sections,
 models and model options (such as energy limits) must be explicitly
 assigned to the particles used in the application. This configuration
 is managed by using so-called physics lists.
-
 %A unique feature of Geant4 is to decouple physics models, cross sections, and processes
 %using abstract interfaces, and manage the usage of different options with so-called the physics lists:
-This decoupling offers several advantages:
+The decoupling offers several advantages:
 \begin{itemize}
 \item Concept provides transparent access to various physics models.
 \item The Geant4 physics system can be easily extended with new models and cross sections.
@@ -213,7 +213,7 @@ Validation results for proton beams of different energies
 and on different targets are reported in the Figs.~\ref{fig:neutronAl}-\ref{fig:neutronPb}.
 % and fragment production comes after that
 In addition to neutron production also fragment production has been
-compared against data from Refs~\cite{gsifragments, carbone}.
+compared against data from Refs.~\cite{gsifragments, carbone}.
 
 %% Particularly fragmentation of C - Pb targets bombarded with 0.8 - 1.6 GeV protons has been investigated
 %% with simulations and results compared with experimental data~\cite{carbone, gsifragments}.
